{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 232,
  "lineage": "e37fe8ef-3cff-5caa-9354-bab729244ff9",
  "resources": [
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:internet-gateway/igw-06778f850c53e4fda",
            "id": "igw-06778f850c53e4fda",
            "owner_id": "647198474080",
            "tags": {
              "Name": "medusa-igw"
            },
            "tags_all": {
              "Name": "medusa-igw"
            },
            "vpc_id": "vpc-0ca2a82631a66ab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06778f850c53e4fda",
            "id": "r-rtb-08b9e8c48911eb38a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b9e8c48911eb38a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_internet_gateway.igw",
            "module.Vpc-ubnets.aws_route_table.public",
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:route-table/rtb-08b9e8c48911eb38a",
            "id": "rtb-08b9e8c48911eb38a",
            "owner_id": "647198474080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06778f850c53e4fda",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca2a82631a66ab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b01c73b4e8fc9374",
            "route_table_id": "rtb-08b9e8c48911eb38a",
            "subnet_id": "subnet-0c0d708600b4dcb8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_route_table.public",
            "module.Vpc-ubnets.aws_subnet.subnet1",
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022c09d51bf466bee",
            "route_table_id": "rtb-08b9e8c48911eb38a",
            "subnet_id": "subnet-0d399b0641a388fee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_route_table.public",
            "module.Vpc-ubnets.aws_subnet.subnet2",
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:security-group/sg-028de466072ef7208",
            "description": "Allow inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028de466072ef7208",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6500
              }
            ],
            "name": "medusa-allow-tls",
            "name_prefix": "",
            "owner_id": "647198474080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "medusa-allow-tls"
            },
            "tags_all": {
              "Name": "medusa-allow-tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca2a82631a66ab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:subnet/subnet-0c0d708600b4dcb8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0d708600b4dcb8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647198474080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub1"
            },
            "tags_all": {
              "Name": "sub1"
            },
            "vpc_id": "vpc-0ca2a82631a66ab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:subnet/subnet-0d399b0641a388fee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d399b0641a388fee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647198474080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub2"
            },
            "tags_all": {
              "Name": "sub2"
            },
            "vpc_id": "vpc-0ca2a82631a66ab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:vpc/vpc-0ca2a82631a66ab17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049a19642e64cde3e",
            "default_route_table_id": "rtb-0125315f7ad95b760",
            "default_security_group_id": "sg-066009937e6a479ca",
            "dhcp_options_id": "dopt-0720d04f49ca029e6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca2a82631a66ab17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0125315f7ad95b760",
            "owner_id": "647198474080"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:security-group-rule/sgr-06b1ec7c94816799b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06b1ec7c94816799b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-028de466072ef7208",
            "security_group_rule_id": "sgr-06b1ec7c94816799b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_security_group.allow_tls",
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ecs_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:security-group-rule/sgr-05fc0082d6fe39914",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6500,
            "id": "sgr-05fc0082d6fe39914",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-028de466072ef7208",
            "security_group_id": "sg-028de466072ef7208",
            "security_group_rule_id": "sgr-05fc0082d6fe39914",
            "tags": null,
            "tags_all": {},
            "to_port": 6500
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_security_group.allow_tls",
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Vpc-ubnets",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:647198474080:security-group-rule/sgr-0a27d168890e2c5dd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a27d168890e2c5dd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-028de466072ef7208",
            "security_group_rule_id": "sgr-0a27d168890e2c5dd",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_security_group.allow_tls",
            "module.Vpc-ubnets.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:647198474080:loadbalancer/app/medusa-test-lb-tf/4a13e9d994883af3",
            "arn_suffix": "app/medusa-test-lb-tf/4a13e9d994883af3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "medusa-test-lb-tf-686821572.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:647198474080:loadbalancer/app/medusa-test-lb-tf/4a13e9d994883af3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "medusa-test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-028de466072ef7208"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c0d708600b4dcb8f"
              },
              {
                "subnet_id": "subnet-0d399b0641a388fee"
              }
            ],
            "subnets": [
              "subnet-0c0d708600b4dcb8f",
              "subnet-0d399b0641a388fee"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0ca2a82631a66ab17",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_security_group.allow_tls",
            "module.Vpc-ubnets.aws_subnet.subnet1",
            "module.Vpc-ubnets.aws_subnet.subnet2",
            "module.Vpc-ubnets.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:647198474080:listener/app/medusa-test-lb-tf/4a13e9d994883af3/4a50870c0ba121a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:647198474080:targetgroup/tf-example-lb-tg/cf4a264b7b4f8718",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:647198474080:listener/app/medusa-test-lb-tf/4a13e9d994883af3/4a50870c0ba121a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:647198474080:loadbalancer/app/medusa-test-lb-tf/4a13e9d994883af3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_security_group.allow_tls",
            "module.Vpc-ubnets.aws_subnet.subnet1",
            "module.Vpc-ubnets.aws_subnet.subnet2",
            "module.Vpc-ubnets.aws_vpc.main",
            "module.alb.aws_lb.test",
            "module.alb.aws_lb_target_group.TG"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:647198474080:targetgroup/tf-example-lb-tg/cf4a264b7b4f8718",
            "arn_suffix": "targetgroup/tf-example-lb-tg/cf4a264b7b4f8718",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:647198474080:targetgroup/tf-example-lb-tg/cf4a264b7b4f8718",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:647198474080:loadbalancer/app/medusa-test-lb-tf/4a13e9d994883af3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-example-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ca2a82631a66ab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Vpc-ubnets.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}